hardening(shader): preserve deterministic shader program compilation order